# python-code-golf-fine-tuning-challenge

./: .gitignore  LINUX_GPU_RUNBOOK.md  README.MD  SUBMISSION_BLUEPRINT.md  SUBMISSION_GUIDELINES_CHALLENGE_SPECIFIC.md  SUBMISSION_GUIDELINES_GENERAL.md  all_web_page.txt  pyproject.toml  requirements-no-torch.txt  requirements.txt  sample_submission.csv
data/: README.md  train_messages.json
dataset/public/: README.md  test.jsonl  train.jsonl
golf_ft/: __init__.py  constraints.py  data_pipeline.py  infer.py  mini_grader.py  paths.py  score_train.py  submission_qa.py  train_lora.py
scripts/: env_hf_mirror.sh  run_pipeline.sh  setup_venv.sh  setup_venv_linux_gpu.sh
working/: README.md  submission.csv
