[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "golf-ft"
version = "0.1.0"
description = "Code golf lambda fine-tuning challenge helpers"
readme = "README.MD"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
  "transformers>=4.44.0",
  "peft>=0.12.0",
  "accelerate>=0.33.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["golf_ft*"]
